--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+/* young-serif-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Young Serif";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/young-serif-v2-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* outfit-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/outfit-v11-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* outfit-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/outfit-v11-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* outfit-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/outfit-v11-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -30,17 +64,21 @@ body {
   margin-left: auto;
   margin-right: auto;
   border-radius: 24px;
-  background-color: rgba(255, 247, 251, 1);
+  background-color: rgb(255, 255, 255);
 }
 .container-site-img {
   padding-top: 40px;
   border-radius: 12px;
   padding-bottom: 40px;
+  padding-left: 40px;
 }
 .container-2 {
   width: 656px;
   margin-right: auto;
   margin-left: auto;
+}
+.section-Instructions ol li {
+  padding-bottom: 8px;
 }
 .section-1 {
   margin-bottom: 32px;
@@ -53,17 +91,19 @@ body {
   padding-bottom: 24px;
 }
 .section-2-info {
-  background-color: #fff7fb;
   border-radius: 12px;
   margin-bottom: 32px;
 }
 .section-2 {
 }
 .section-2-in {
+  background-color: #fff7fb;
   width: 600px;
   padding: 28px;
   margin-right: auto;
   margin-left: auto;
+  border-radius: 12px;
+  margin-bottom: 40px;
 }
 .section-2-heading {
   font-weight: 600;
@@ -124,7 +164,7 @@ body {
   margin-bottom: 32px;
 }
 .section-Instructions {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .sc-Instruction__heading {
@@ -136,49 +176,51 @@ body {
   font-size: 28px;
 }
 .section-Instructions__ol li {
-    padding-bottom: 8px;
+  padding-bottom: 8px;
 }
 
 .section-Instructions__ol li:last-child {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 ol {
-    list-style-type: decimal;
-    padding-left: 40px;
+  list-style-type: decimal;
+  padding-left: 40px;
 }
 
 ol li::marker {
-    content: counter(list-item);
-    font-weight: bold;
+  content: counter(list-item);
+  font-weight: bold;
 }
 
 .section-Nutrition {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 .sc-Nutrition__heading {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 .sc-Nutrition-info {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 .section-Nutrition__left {
-    margin-left: 32px;
+  margin-left: 32px;
 }
 .div {
 }
 .bottom {
-    padding-bottom: 40px;
+  padding-bottom: 40px;
 }
 .section-Nutrition__last {
-    display: flex;
-    padding-bottom: 12px;
+  display: flex;
+  padding-bottom: 12px;
 }
-.chap {
-    width: 288px;
+
+.section-Nutrition__left {
+  color: #854632;
+  font-weight: 700;
+  line-height: 150%;
 }
-.section-Nutrition__chap {
-    color: #854632;
-    font-weight: 700;
-    line-height: 150%;
+
+.right {
+  width: 288px;
 }
